kustomize/parlasite/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite
  labels:
    app: parlasite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite
  template:
    metadata:
      labels:
        app: parlasite
    spec:
      containers:
        - name: parlasite
          image: parlasite-trbovlje
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 75Mi
              cpu: 50m
            limits:
              memory: 75Mi
              cpu: 50m
