kustomize/parlasite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasite
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-sandbox"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - parlasite-hrvaska.lb.djnd.si
        - parlametar.hr
      secretName: parlasite-tls
  rules:
    - host: parlasite-hrvaska.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite
                port:
                  number: 3066
    - host: parlametar.hr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite
                port:
                  number: 3066
